--- a/FinalProWeb/src/main/webapp/joinTeam.html
+++ b/FinalProWeb/src/main/webapp/joinTeam.html
@@ -12,15 +12,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <!-- 中文字型樣式 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
-        rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
     <link rel="stylesheet" href="./css/joinTeam.css">
     <link rel="stylesheet" href="./css/navbar&footer.css">
+    <!-- 連接Js外部檔案 -->
+    <script src="./Js/fontlink.js"></script>
     <!-- MDB頭像 -->
     <script type="text/javascript" src="./Js/mdb.min.js"></script>
 </head>
