--- a/FinalProWeb/src/main/webapp/member.html
+++ b/FinalProWeb/src/main/webapp/member.html
@@ -20,22 +20,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
-        rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BIZ+UDPGothic&family=Noto+Sans+HK:wght@300;500&display=swap"
-        rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
     <link rel="stylesheet" href="./css/sidebar.css">
     <!-- 連結Js外部檔案 -->
     <script src="./Js/sidebar.js"></script>
+    <script src="./Js/fontlink.js"></script>
 </head>
 
 <body>
